--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ctransformers==0.2.16
 sentence-transformers==2.2.2
 pinecone-client==5.0.1
-langchain==0.1.3
+langchain==0.3.4
 flask==2.3.3
+langchain-community==0.3.3
