testing is done

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 ctransformers==0.2.16
-sentence-transformers==2.2.2
-pinecone-client==5.0.1
+sentence-transformers==3.2.1
 langchain==0.3.4
 flask==2.3.3
 langchain-community==0.3.3
+pypdf
+langchain-chroma
+langchain-groq
